Adjust bottom waypoint to 115px to fix jump during scroll

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -448,7 +448,7 @@ border-top-right-radius: 3px;
 
 .waypoint-bottom {
   position: absolute;
-  bottom: 100px;
+  bottom: 115px;
   height: 20px;
   width: 20px;
 }
